Changes in version 0.11.0
  
  New features
    -$MAJOR CHANGE$ rework of setEBV (breaks some scripts)
    -genotype data now stored as bits (was bytes)
    -implemented a gamma model for crossover interference
    -added the mutate function to model random mutations
    -added a vignette explaining the biological model for traits
    -GS models now handle polyploids
    -heterogenous error variance is now optional in GS models (defaults to homogeneous error)
    -added keepParents option to makeDH and self (for modeling pedigree selection)
    -improved gene drop functionality of pedigreeCross
    -added RRBLUP_SCA2
    
  Bug fixes
    -fixed a bug returning the first individual when selecting 0

Changes in version 0.10.0
  
  New features
    -added traits with epistasis
    -Max number of threads automatically detected
    -added RRBLUP_D2
    -added version tracking to SimParam
    -removed trackHaploPop (superceded by pullIbdHaplo)
    -added fastRRBLUP
  
  Bug fixes
    -fixed faulty double crossover logic
    -fixed broken writePlink
    -fixed broken pullIbdHaplo
    -mergePops no longer assumes diploidy

Changes in version 0.9.0

  New features
    -added support for autopolyploids
    -added RRBLUP_GCA2
    -randCross2 can now "balance" crossing when not using gender
  
  Bug fixes
    -fixed recombination tracking bug in createDH2
    -removed bug in setEBV with append=TRUE

Changes in version 0.8.2

  Bug fixes
    -fixed ambiguous overloading in optimize.cpp

Changes in version 0.8.1

  Bug fixes
    -setPheno (not setPhenoGCA) passes the number of reps to populations
    -fixed bug in editGenomeTopQtl
    -fixed bug in RRBLUP_D
    -fixed bug in resetPop
    -fixed bug in SimParam_rescaleTraits
    -removed unimplemented SimParam_restrSnpSites and SimParam_restrQtlSites
    -add error message for no traits in calcGCA

Changes in version 0.8.0

  New features
    -added GxE traits with zero environmental variance
    -faster trait scaling